--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.5",
     "next": "^15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
