--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.37.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
